--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -9,13 +9,13 @@
     <script src="JS/JSCadastro.js" defer></script>
   </head>
   <body>
-    <div class="language-selector">
-      <button class="lang-btn active" data-lang="pt">PT</button>
-      <button class="lang-btn" data-lang="es">ES</button>
-    </div>
 
+    <!-- Trocar idioma para Português, Espanhol ou Inglês -->
     <div class="language-selector">
-      </div>
+    <button onclick="switchLanguage('pt')">Português</button>
+    <button onclick="switchLanguage('es')">Español</button>
+    <button onclick="switchLanguage('en')">English</button>
+    </div>
 
     <div class="background">
       <div class="background-image"></div>
