--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -15,6 +15,14 @@
     <script src="./JS/JSListaFerramentas.js" defer></script>
   </head>
   <body>
+
+    <!-- Trocar idioma para Português, Espanhol ou Inglês -->
+    <div class="language-selector">
+    <button onclick="switchLanguage('pt')">Português</button>
+    <button onclick="switchLanguage('es')">Español</button>
+    <button onclick="switchLanguage('en')">English</button>
+    </div>
+
     <div class="loading-overlay" id="loading-overlay">
       <div class="loading-content">
         <div class="loading" style="width: 40px; height: 40px"></div>
