--- a/front/ListaAluno/ListaUsuario.html
+++ b/front/ListaAluno/ListaUsuario.html
@@ -15,6 +15,14 @@
     <script src="./JS/JSListaUsuario.js" defer></script>
   </head>
   <body>
+
+    <!-- Trocar idioma para Português, Espanhol ou Inglês -->
+    <div class="language-selector">
+    <button onclick="switchLanguage('pt')">Português</button>
+    <button onclick="switchLanguage('es')">Español</button>
+    <button onclick="switchLanguage('en')">English</button>
+    </div>
+
     <div class="container">
       <div class="sidebar">
         <div class="logo">
