--- a/front/Locais/local.html
+++ b/front/Locais/local.html
@@ -14,6 +14,14 @@
     <script src="./JS/JSLocal.js" defer></script>
   </head>
   <body>
+
+    <!-- Trocar idioma para Português, Espanhol ou Inglês -->
+    <div class="language-selector">
+    <button onclick="switchLanguage('pt')">Português</button>
+    <button onclick="switchLanguage('es')">Español</button>
+    <button onclick="switchLanguage('en')">English</button>
+    </div>
+
     <div class="container">
       <div class="sidebar">
         <div class="logo">
@@ -229,11 +237,6 @@
     <div id="notification" class="notification" style="display: none"></div>
     <div id="loading-overlay" class="loading-overlay" style="display: none">
       <div class="loading-spinner"></div>
-    </div>
-
-    <div class="language-switcher">
-      <button onclick="switchLanguage('pt')">Português</button>
-      <button onclick="switchLanguage('en')">English</button>
     </div>
   </body>
 </html>
