--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -9,6 +10,14 @@
     <script src="./JS/EmpVisu.js" defer></script>
 </head>
 <body>
+
+    <!-- Trocar idioma para Português, Espanhol ou Inglês -->
+    <div class="language-selector">
+    <button onclick="switchLanguage('pt')">Português</button>
+    <button onclick="switchLanguage('es')">Español</button>
+    <button onclick="switchLanguage('en')">English</button>
+    </div>
+
     <div class="container">
         <div class="sidebar">
             <div class="logo">
@@ -120,11 +129,6 @@
                 <button id="modal-return-btn" class="return-btn"><i class="fas fa-check-circle"></i> <span data-translate-key="modal-return-btn">Registrar Devolução</span></button>
             </div>
         </div>
-    </div>
-    
-    <div class="language-switcher">
-        <button onclick="switchLanguage('pt')">Português</button>
-        <button onclick="switchLanguage('en')">English</button>
     </div>
 </body>
 </html>
