--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -1,109 +1,114 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title data-translate-key="title">FaceShield - Cadastro</title>
-  <link rel="stylesheet" href="./CSS/CssCadastro.css" />
-  <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-  <script src="./JS/JSCadastro.js" defer></script>
-</head>
-<body>
-  <div class="botaoVoltar">
-    <a class="buttonVoltar" href="../index.html" data-translate-key="back-btn">Voltar</a>
-  </div>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title data-i18n="page-title">Cadastro</title>
+    <link rel="stylesheet" href="CSS/CssCadastro.css" />
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script src="JS/JSCadastro.js" defer></script>
+  </head>
+  <body>
 
-  <main class="main-content">
-    <div class="form-container">
-      <form id="cadastroForm" class="form-grid">
-        <div class="input-group floating-label">
-          <select id="tipoUsuario" name="tipoUsuario" required>
-            <option value="" disabled selected hidden data-translate-key="select-user-type">
-              Selecione o tipo de usuário
-            </option>
-            <option value="1" data-translate-key="student">Aluno</option>
-            <option value="2" data-translate-key="teacher">Professor</option>
-          </select>
-          <label for="tipoUsuario" data-translate-key="user-type">Tipo de Usuário</label>
-          <div class="input-border"></div>
-          <span class="validation-icon"></span>
-          <div class="error-message"></div>
-        </div>
+    <!-- Trocar idioma para Português, Espanhol ou Inglês -->
+    <div class="language-selector">
+    <button onclick="switchLanguage('pt')">Português</button>
+    <button onclick="switchLanguage('es')">Español</button>
+    <button onclick="switchLanguage('en')">English</button>
+    </div>
 
-        <div class="input-group floating-label">
-          <input type="text" id="nome" name="nome" required placeholder="Nome"/>
-          <label for="nome" data-translate-key="first-name">Nome</label>
-          <div class="input-border"></div>
-          <span class="validation-icon"></span>
-          <div class="error-message"></div>
-        </div>
+    <div class="background">
+      <div class="background-image"></div>
+      <div class="background-overlay"></div>
+    </div>
+    <div class="botaoVoltar">
+      <a class="buttonVoltar" href="../index.html" data-i18n="back-btn">
+        Voltar
+      </a>
+    </div>
 
-        <div class="input-group floating-label">
-          <input type="text" id="sobrenome" name="sobrenome" required placeholder="Sobrenome"/>
-          <label for="sobrenome" data-translate-key="last-name">Sobrenome</label>
-          <div class="input-border"></div>
-          <span class="validation-icon"></span>
-          <div class="error-message"></div>
-        </div>
+    <main class="main-content">
+      <div class="logo-container">
+        <img
+          src="../Recursos/LogoFaceShield.png"
+          alt="Logo da Empresa"
+          class="logo"
+        />
+      </div>
 
-        <div class="input-group floating-label">
-          <input type="text" id="turma" name="turma" required placeholder="Turma"/>
-          <label for="turma" data-translate-key="class">Turma</label>
-          <div class="input-border"></div>
-          <span class="validation-icon"></span>
-          <div class="error-message"></div>
-        </div>
+      <div class="form-container">
+        <h1 data-i18n="page-title">FaceShield - Cadastro</h1>
+        <form id="cadastroForm">
+          <div class="input-group floating-label">
+            <label for="tipoUsuario" data-i18n="select-user-type"
+              >Selecione o tipo de usuário</label
+            >
+            <select id="tipoUsuario" name="tipoUsuario">
+              <option value=""></option>
+              <option value="1" data-i18n="student">Aluno</option>
+              <option value="2" data-i18n="teacher">Professor</option>
+            </select>
+            <div class="input-border"></div>
+            <span class="validation-icon"></span>
+          </div>
 
-        <div class="input-group floating-label" id="username-group">
-          <input type="text" id="username" name="username" placeholder="Nome de Usuário"/>
-          <label for="username" data-translate-key="username">Nome de Usuário</label>
-          <div class="input-border"></div>
-          <span class="validation-icon"></span>
-          <div class="error-message"></div>
-        </div>
+          <div class="input-group floating-label" id="nome-group">
+            <input type="text" id="nome" name="nome" required />
+            <label for="nome" data-i18n="first-name">Nome</label>
+            <div class="input-border"></div>
+            <span class="validation-icon"></span>
+          </div>
 
-        <div class="input-group floating-label" id="senha-group">
-          <input type="password" id="senha" name="senha" placeholder="Senha"/>
-          <label for="senha" data-translate-key="password">Senha</label>
-          <div class="input-border"></div>
-          <span class="validation-icon"></span>
-          <div class="error-message"></div>
-        </div>
+          <div class="input-group floating-label" id="sobrenome-group">
+            <input type="text" id="sobrenome" name="sobrenome" required />
+            <label for="sobrenome" data-i18n="last-name">Sobrenome</label>
+            <div class="input-border"></div>
+            <span class="validation-icon"></span>
+          </div>
 
-        <div class="face-recognition-container">
-          <button type="button" class="view-camera-btn" data-translate-key="view-camera">
-            Visualizar Câmera
-          </button>
+          <div class="input-group floating-label" id="turma-group">
+            <input type="text" id="turma" name="turma" required />
+            <label for="turma" data-i18n="class">Turma</label>
+            <div class="input-border"></div>
+            <span class="validation-icon"></span>
+          </div>
 
-          <div class="face-scan-widget">
-            <div class="scan-animation-overlay"></div>
-            <div class="scanning-line-effect"></div>
-            <img id="camera-feed" alt="Camera Feed" />
-            <p class="upload-instruction" data-translate-key="upload-instruction">
+          <div class="input-group floating-label" id="username-group">
+            <input type="text" id="username" name="username" />
+            <label for="username" data-i18n="username">Nome de Usuário</label>
+            <div class="input-border"></div>
+            <span class="validation-icon"></span>
+          </div>
+
+          <div class="input-group floating-label" id="senha-group">
+            <input type="password" id="senha" name="senha" />
+            <label for="senha" data-i18n="password">Senha</label>
+            <div class="input-border"></div>
+            <span class="validation-icon"></span>
+          </div>
+
+          <div
+            class="face-scan-widget"
+            style="
+              cursor: pointer;
+              text-align: center;
+              padding: 1rem;
+              border: 2px dashed rgba(0, 224, 255, 0.4);
+              border-radius: 8px;
+              color: white;
+            "
+          >
+            <p class="upload-instruction" data-i18n="upload-instruction">
               Clique para captura biométrica
             </p>
           </div>
-        </div>
 
-        <button type="submit" class="botao" data-translate-key="register-btn">Cadastrar</button>
-      </form>
-    </div>
-  </main>
-
-  <!-- Feedback -->
-  <div id="feedback" class="feedback"></div>
-
-  <div class="loading-overlay">
-    <div class="loading-spinner"></div>
-  </div>
-
-  <!-- Botões para alternar idioma -->
-  <button onclick="switchLanguage('pt')">Português</button>
-  <button onclick="switchLanguage('en')">English</button>
-
-  <!-- Tradução + JS -->
-  <script>
-    
-  </script>
-</body>
+          <button type="submit" class="botao" data-i18n="register-btn">
+            Cadastrar
+          </button>
+        </form>
+        <div id="feedback" class="feedback" style="display: none"></div>
+      </div>
+    </main>
+  </body>
 </html>
