--- a/front/Login/LoginProfessor.html
+++ b/front/Login/LoginProfessor.html
@@ -8,6 +8,14 @@
     <script src="./JS/JSLogin.js" defer></script>
   </head>
   <body>
+
+    <!-- Trocar idioma para Português, Espanhol ou Inglês -->
+    <div class="language-selector">
+    <button onclick="switchLanguage('pt')">Português</button>
+    <button onclick="switchLanguage('es')">Español</button>
+    <button onclick="switchLanguage('en')">English</button>
+    </div>
+
     <div class="background">
       <div class="background-image"></div>
       <div class="background-overlay"></div>
@@ -52,10 +60,5 @@
         </form>
       </div>
     </main>
-
-    <div class="language-switcher">
-      <button onclick="switchLanguage('pt')">Português</button>
-      <button onclick="switchLanguage('en')">English</button>
-    </div>
   </body>
 </html>
