--- a/front/PostEmp/PostEmp.html
+++ b/front/PostEmp/PostEmp.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -9,6 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
+
+    <!-- Trocar idioma para Português, Espanhol ou Inglês -->
+    <div class="language-selector">
+    <button onclick="switchLanguage('pt')">Português</button>
+    <button onclick="switchLanguage('es')">Español</button>
+    <button onclick="switchLanguage('en')">English</button>
+    </div>
+
     <div class="container">
         <div class="sidebar">
             <div class="logo">
@@ -130,11 +139,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    
-    <div class="language-switcher">
-        <button onclick="switchLanguage('pt')">Português</button>
-        <button onclick="switchLanguage('en')">English</button>
     </div>
 </body>
 </html>
