--- a/front/ListaAluno/ListaUsuario.html
+++ b/front/ListaAluno/ListaUsuario.html
@@ -6,7 +6,7 @@
     <title data-translate-key="list-title">
       Sistema de Empréstimos - Usuários
     </title>
-    <link rel="stylesheet" href="./CSS/CssListaUsuario.css" />
+    <link rel="stylesheet" href="CSS/CssListaUsuario.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -15,12 +15,21 @@
     <script src="./JS/JSListaUsuario.js" defer></script>
   </head>
   <body>
-
     <!-- Trocar idioma para Português, Espanhol ou Inglês -->
     <div class="language-selector">
-    <button onclick="switchLanguage('pt')">Português</button>
-    <button onclick="switchLanguage('es')">Español</button>
-    <button onclick="switchLanguage('en')">English</button>
+      <button
+        class="lang-btn active"
+        data-lang="pt"
+        onclick="switchLanguage('pt')"
+      >
+        PT
+      </button>
+      <button class="lang-btn" data-lang="es" onclick="switchLanguage('es')">
+        ES
+      </button>
+      <button class="lang-btn" data-lang="en" onclick="switchLanguage('en')">
+        EN
+      </button>
     </div>
 
     <div class="container">
