--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -15,12 +15,21 @@
     <script src="./JS/JSListaFerramentas.js" defer></script>
   </head>
   <body>
-
     <!-- Trocar idioma para Português, Espanhol ou Inglês -->
     <div class="language-selector">
-    <button onclick="switchLanguage('pt')">Português</button>
-    <button onclick="switchLanguage('es')">Español</button>
-    <button onclick="switchLanguage('en')">English</button>
+      <button
+        class="lang-btn active"
+        data-lang="pt"
+        onclick="switchLanguage('pt')"
+      >
+        PT
+      </button>
+      <button class="lang-btn" data-lang="es" onclick="switchLanguage('es')">
+        ES
+      </button>
+      <button class="lang-btn" data-lang="en" onclick="switchLanguage('en')">
+        EN
+      </button>
     </div>
 
     <div class="loading-overlay" id="loading-overlay">
