--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -1,134 +1,283 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title data-translate-key="page-title">Sistema de Emprestimos - Histórico</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-    <link rel="stylesheet" href="./CSS/EmprestimoVisu.css" />
+    <title data-translate-key="page-title">
+      Sistema de Emprestimos - Histórico
+    </title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="CSS/CssEmprestimoVisu.css" />
     <script src="./JS/EmpVisu.js" defer></script>
-</head>
-<body>
-
+  </head>
+  <body>
     <!-- Trocar idioma para Português, Espanhol ou Inglês -->
     <div class="language-selector">
-    <button onclick="switchLanguage('pt')">Português</button>
-    <button onclick="switchLanguage('es')">Español</button>
-    <button onclick="switchLanguage('en')">English</button>
+      <button
+        class="lang-btn active"
+        data-lang="pt"
+        onclick="switchLanguage('pt')"
+      >
+        PT
+      </button>
+      <button class="lang-btn" data-lang="es" onclick="switchLanguage('es')">
+        ES
+      </button>
+      <button class="lang-btn" data-lang="en" onclick="switchLanguage('en')">
+        EN
+      </button>
     </div>
 
     <div class="container">
-        <div class="sidebar">
-            <div class="logo">
-                <h2 data-translate-key="sidebar-header"><i class="fas fa-tools"></i> <span>Controle de Empréstimos</span></h2>
-            </div>
-            <div class="menu-item" onclick="window.location.href='../ListaAluno/ListUsuário.html'">
-                <i class="fas fa-user"></i> <span data-translate-key="sidebar-users">Usuários</span>
-            </div>
-            <div class="menu-item active" onclick="window.location.href='../VerEmprestimo/Emprestimos.html'">
-                <i class="fas fa-clipboard-list"></i> <span data-translate-key="sidebar-loans">Empréstimos</span>
-            </div>
-            <div class="menu-item" onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'">
-                <i class="fas fa-toolbox"></i> <span data-translate-key="sidebar-tools">Ferramentas</span>
-            </div>
-            <div class="menu-item" onclick="window.location.href='../Locais/Local.html'">
-                <i class="fas fa-map-marker-alt"></i> <span data-translate-key="sidebar-locations">Locais</span>
-            </div>
-            <div class="menu-item" id="novo-emprestimo-btn">
-                <i class="fas fa-plus-circle"></i> <span data-translate-key="sidebar-new-loan">Novo Empréstimo</span>
-            </div>
-            <div class="menu-item" onclick="window.location.href='../index.html'">
-                <i class="fas fa-sign-out-alt"></i> <span data-translate-key="sidebar-logout">Sair</span>
-            </div>
+      <div class="sidebar">
+        <div class="logo">
+          <h2 data-translate-key="sidebar-header">
+            <i class="fas fa-tools"></i> <span>Controle de Empréstimos</span>
+          </h2>
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
+        >
+          <i class="fas fa-user"></i>
+          <span data-translate-key="sidebar-users">Usuários</span>
+        </div>
+        <div
+          class="menu-item active"
+          onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+        >
+          <i class="fas fa-clipboard-list"></i>
+          <span data-translate-key="sidebar-loans">Empréstimos</span>
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
+        >
+          <i class="fas fa-toolbox"></i>
+          <span data-translate-key="sidebar-tools">Ferramentas</span>
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../Locais/Local.html'"
+        >
+          <i class="fas fa-map-marker-alt"></i>
+          <span data-translate-key="sidebar-locations">Locais</span>
+        </div>
+        <div class="menu-item" id="novo-emprestimo-btn">
+          <i class="fas fa-plus-circle"></i>
+          <span data-translate-key="sidebar-new-loan">Novo Empréstimo</span>
+        </div>
+        <div class="menu-item" onclick="window.location.href='../index.html'">
+          <i class="fas fa-sign-out-alt"></i>
+          <span data-translate-key="sidebar-logout">Sair</span>
+        </div>
+      </div>
+
+      <div class="main-content">
+        <div class="header">
+          <h1 class="page-title" data-translate-key="header-title">
+            <i class="fas fa-history"></i> Histórico de Empréstimos
+          </h1>
+          <button
+            class="logout-btn"
+            onclick="window.location.href='../MenuProf/menuprof.html'"
+            data-translate-key="menu-back-btn"
+          >
+            <i class="fas fa-sign-out-alt"></i> Sair para Menu
+          </button>
         </div>
 
-        <div class="main-content">
-            <div class="header">
-                <h1 class="page-title" data-translate-key="header-title"><i class="fas fa-history"></i> Histórico de Empréstimos</h1>
-                <button class="logout-btn" onclick="window.location.href='../MenuProf/menuprof.html'" data-translate-key="menu-back-btn"><i class="fas fa-sign-out-alt"></i> Sair para Menu</button>
-            </div>
+        <div
+          id="feedback-message"
+          class="feedback-message"
+          style="display: none"
+        ></div>
 
-            <div id="feedback-message" class="feedback-message" style="display: none"></div>
-
-            <div class="filters">
-                <div class="filter-group">
-                    <label for="filter-user"><i class="fas fa-user"></i> <span data-translate-key="filter-user-label">Usuário</span></label>
-                    <input type="text" id="filter-user" data-translate-key="filter-user-placeholder" placeholder="Filtrar por usuário"/>
-                </div>
-                <div class="filter-group">
-                    <label for="filter-tool"><i class="fas fa-toolbox"></i> <span data-translate-key="filter-tool-label">Ferramenta</span></label>
-                    <input type="text" id="filter-tool" data-translate-key="filter-tool-placeholder" placeholder="Filtrar por ferramenta"/>
-                </div>
-                <div class="filter-group">
-                    <label for="filter-status"><i class="fas fa-info-circle"></i> <span data-translate-key="filter-status-label">Status</span></label>
-                    <select id="filter-status">
-                        <option value="" data-translate-key="filter-status-all">Todos os status</option>
-                        <option value="active" data-translate-key="filter-status-active">Em andamento</option>
-                        <option value="returned" data-translate-key="filter-status-returned">Devolvido</option>
-                        <option value="delayed" data-translate-key="filter-status-delayed">Em atraso</option>
-                    </select>
-                </div>
-            </div>
-
-            <div style="overflow-x: auto">
-                <table class="loans-table">
-                    <thead>
-                        <tr>
-                            <th data-translate-key="table-id">ID</th>
-                            <th data-translate-key="table-user">Usuário</th>
-                            <th data-translate-key="table-tool">Ferramenta</th>
-                            <th data-translate-key="table-checkout-date">Data Retirada</th>
-                            <th data-translate-key="table-return-date">Data Devolução</th>
-                            <th data-translate-key="table-status">Status</th>
-                            <th data-translate-key="table-notes">Observações</th>
-                            <th data-translate-key="table-actions">Ações</th>
-                        </tr>
-                    </thead>
-                    <tbody id="loans-table-body">
-                        <tr><td colspan="8" style="text-align: center; padding: 20px" data-translate-key="loading-loans">Carregando empréstimos...</td></tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="pagination">
-                <button id="prev-page" disabled><i class="fas fa-chevron-left"></i> <span data-translate-key="pagination-prev">Anterior</span></button>
-                <span id="page-info" data-translate-key="pagination-page-info" data-page="1" data-total="1">Página 1 de 1</span>
-                <button id="next-page"><span data-translate-key="pagination-next">Próxima</span> <i class="fas fa-chevron-right"></i></button>
-            </div>
+        <div class="filters">
+          <div class="filter-group">
+            <label for="filter-user"
+              ><i class="fas fa-user"></i>
+              <span data-translate-key="filter-user-label">Usuário</span></label
+            >
+            <input
+              type="text"
+              id="filter-user"
+              data-translate-key="filter-user-placeholder"
+              placeholder="Filtrar por usuário"
+            />
+          </div>
+          <div class="filter-group">
+            <label for="filter-tool"
+              ><i class="fas fa-toolbox"></i>
+              <span data-translate-key="filter-tool-label"
+                >Ferramenta</span
+              ></label
+            >
+            <input
+              type="text"
+              id="filter-tool"
+              data-translate-key="filter-tool-placeholder"
+              placeholder="Filtrar por ferramenta"
+            />
+          </div>
+          <div class="filter-group">
+            <label for="filter-status"
+              ><i class="fas fa-info-circle"></i>
+              <span data-translate-key="filter-status-label"
+                >Status</span
+              ></label
+            >
+            <select id="filter-status">
+              <option value="" data-translate-key="filter-status-all">
+                Todos os status
+              </option>
+              <option value="active" data-translate-key="filter-status-active">
+                Em andamento
+              </option>
+              <option
+                value="returned"
+                data-translate-key="filter-status-returned"
+              >
+                Devolvido
+              </option>
+              <option
+                value="delayed"
+                data-translate-key="filter-status-delayed"
+              >
+                Em atraso
+              </option>
+            </select>
+          </div>
         </div>
+
+        <div style="overflow-x: auto">
+          <table class="loans-table">
+            <thead>
+              <tr>
+                <th data-translate-key="table-id">ID</th>
+                <th data-translate-key="table-user">Usuário</th>
+                <th data-translate-key="table-tool">Ferramenta</th>
+                <th data-translate-key="table-checkout-date">Data Retirada</th>
+                <th data-translate-key="table-return-date">Data Devolução</th>
+                <th data-translate-key="table-status">Status</th>
+                <th data-translate-key="table-notes">Observações</th>
+                <th data-translate-key="table-actions">Ações</th>
+              </tr>
+            </thead>
+            <tbody id="loans-table-body">
+              <tr>
+                <td
+                  colspan="8"
+                  style="text-align: center; padding: 20px"
+                  data-translate-key="loading-loans"
+                >
+                  Carregando empréstimos...
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="pagination">
+          <button id="prev-page" disabled>
+            <i class="fas fa-chevron-left"></i>
+            <span data-translate-key="pagination-prev">Anterior</span>
+          </button>
+          <span
+            id="page-info"
+            data-translate-key="pagination-page-info"
+            data-page="1"
+            data-total="1"
+            >Página 1 de 1</span
+          >
+          <button id="next-page">
+            <span data-translate-key="pagination-next">Próxima</span>
+            <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+      </div>
     </div>
 
     <div id="loan-details-modal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2 data-translate-key="modal-title">Detalhes do Empréstimo</h2>
-                <span class="close">&times;</span>
-            </div>
-            <div class="modal-body">
-                <div class="details-grid">
-                    <div class="detail-item"><label data-translate-key="modal-id-label">ID:</label><span id="modal-id"></span></div>
-                    <div class="detail-item"><label data-translate-key="modal-user-label">Usuário:</label><span id="modal-user"></span></div>
-                    <div class="detail-item"><label data-translate-key="modal-tool-label">Ferramenta:</label><span id="modal-tool"></span></div>
-                    <div class="detail-item"><label data-translate-key="modal-withdrawal-label">Data de Retirada:</label><span id="modal-withdrawal"></span></div>
-                    <div class="detail-item"><label data-translate-key="modal-expected-return-label">Data de Devolução Prevista:</label><span id="modal-expected-return"></span></div>
-                    <div class="detail-item"><label data-translate-key="modal-actual-return-label">Data de Devolução Real:</label><span id="modal-actual-return"></span></div>
-                    <div class="detail-item"><label data-translate-key="modal-status-label">Status:</label><span id="modal-status"></span></div>
-                    <div class="detail-item full-width"><label data-translate-key="modal-location-label">Localização da Ferramenta:</label>
-                        <div id="modal-location">
-                            <div class="location-detail"><i class="fas fa-building"></i> <span id="modal-location-space"></span></div>
-                            <div class="location-detail"><i class="fas fa-archive"></i> <span id="modal-location-cabinet"></span></div>
-                            <div class="location-detail"><i class="fas fa-layer-group"></i> <span id="modal-location-shelf"></span></div>
-                            <div class="location-detail"><i class="fas fa-box"></i> <span id="modal-location-case"></span></div>
-                        </div>
-                    </div>
-                    <div class="detail-item full-width"><label data-translate-key="modal-notes-label">Observações:</label><span id="modal-notes"></span></div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button id="modal-return-btn" class="return-btn"><i class="fas fa-check-circle"></i> <span data-translate-key="modal-return-btn">Registrar Devolução</span></button>
-            </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 data-translate-key="modal-title">Detalhes do Empréstimo</h2>
+          <span class="close">&times;</span>
         </div>
+        <div class="modal-body">
+          <div class="details-grid">
+            <div class="detail-item">
+              <label data-translate-key="modal-id-label">ID:</label
+              ><span id="modal-id"></span>
+            </div>
+            <div class="detail-item">
+              <label data-translate-key="modal-user-label">Usuário:</label
+              ><span id="modal-user"></span>
+            </div>
+            <div class="detail-item">
+              <label data-translate-key="modal-tool-label">Ferramenta:</label
+              ><span id="modal-tool"></span>
+            </div>
+            <div class="detail-item">
+              <label data-translate-key="modal-withdrawal-label"
+                >Data de Retirada:</label
+              ><span id="modal-withdrawal"></span>
+            </div>
+            <div class="detail-item">
+              <label data-translate-key="modal-expected-return-label"
+                >Data de Devolução Prevista:</label
+              ><span id="modal-expected-return"></span>
+            </div>
+            <div class="detail-item">
+              <label data-translate-key="modal-actual-return-label"
+                >Data de Devolução Real:</label
+              ><span id="modal-actual-return"></span>
+            </div>
+            <div class="detail-item">
+              <label data-translate-key="modal-status-label">Status:</label
+              ><span id="modal-status"></span>
+            </div>
+            <div class="detail-item full-width">
+              <label data-translate-key="modal-location-label"
+                >Localização da Ferramenta:</label
+              >
+              <div id="modal-location">
+                <div class="location-detail">
+                  <i class="fas fa-building"></i>
+                  <span id="modal-location-space"></span>
+                </div>
+                <div class="location-detail">
+                  <i class="fas fa-archive"></i>
+                  <span id="modal-location-cabinet"></span>
+                </div>
+                <div class="location-detail">
+                  <i class="fas fa-layer-group"></i>
+                  <span id="modal-location-shelf"></span>
+                </div>
+                <div class="location-detail">
+                  <i class="fas fa-box"></i>
+                  <span id="modal-location-case"></span>
+                </div>
+              </div>
+            </div>
+            <div class="detail-item full-width">
+              <label data-translate-key="modal-notes-label">Observações:</label
+              ><span id="modal-notes"></span>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="modal-return-btn" class="return-btn">
+            <i class="fas fa-check-circle"></i>
+            <span data-translate-key="modal-return-btn"
+              >Registrar Devolução</span
+            >
+          </button>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
