--- a/front/Login/LoginProfessor.html
+++ b/front/Login/LoginProfessor.html
@@ -41,9 +41,11 @@
             <span class="validation-icon"></span>
           </div>
 
-          <a href="../MenuProf/Menu.html" class="botao">Entrar</a>
+          <button type="submit" class="botao">Entrar</button>
         </form>
       </div>
     </main>
+
+    <script src="JS/LoginProfessor.js"></script>
   </body>
 </html>
