--- a/front/Html/LoginProfessor.html
+++ b/front/Html/LoginProfessor.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="CSS/LoginProf.css" />
+    <title>Login Professor</title>
+    <link rel="stylesheet" href="../Styles/LoginProfessor.css" />
   </head>
   <body>
     <div class="background">
@@ -18,7 +18,7 @@
     <main class="main-content">
       <div class="logo-container">
         <img
-          src="../Recursos/LogoFaceShield.png"
+          src="../Assets/LogoFaceShield.png"
           alt="Logo da Empresa"
           class="logo"
         />
@@ -41,7 +41,7 @@
             <span class="validation-icon"></span>
           </div>
 
-          <a href="../MenuProf/Menu.html" class="botao">Entrar</a>
+          <a href="Menu.html" class="botao">Entrar</a>
         </form>
       </div>
     </main>
