--- a/front/Html/Menu.html
+++ b/front/Html/Menu.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/Menu.css" />
+    <link rel="stylesheet" href="../Styles/Menu.css" />
   </head>
   <body>
     <div class="header">
@@ -20,7 +20,7 @@
       <div
         class="menu-card"
         id="alunos"
-        onclick="window.location.href='../ListaAluno/ListUsuário.html'"
+        onclick="window.location.href='Usuarios.html'"
       >
         <h2>Usuários</h2>
         <p>Visualizar Usuários</p>
@@ -30,17 +30,17 @@
       <div
         class="menu-card"
         id="emprestimos"
-        onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+        onclick="window.location.href='Emprestimos.html'"
       >
         <h2>Empréstimos</h2>
-        <p>Histórico de itens emprestados</p>
+        <p>Histórico de ferramentas emprestadas</p>
       </div>
 
       <!-- Ferramentas -->
       <div
         class="menu-card"
         id="ferramentas"
-        onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
+        onclick="window.location.href='Ferramentas.html'"
       >
         <h2>Ferramentas</h2>
         <p>Visualizar ferramentas cadastradas</p>
@@ -50,7 +50,7 @@
       <div
         class="menu-card"
         id="locais"
-        onclick="window.location.href='../Locais/local.html'"
+        onclick="window.location.href='Local.html'"
       >
         <h2>Locais</h2>
         <p>Áreas cadastradas</p>
@@ -60,10 +60,10 @@
       <div
         class="menu-card"
         id="novo-emprestimo"
-        onclick="window.location.href='../PostEmp/PostEmp.html'"
+        onclick="window.location.href='PostEmp.html'"
       >
         <h2>Fazer Empréstimo</h2>
-        <p>Registrar empréstimo do professor</p>
+        <p>Registrar empréstimo </p>
       </div>
     </div>
 
