--- a/front/Html/Usuarios.html
+++ b/front/Html/Usuarios.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Empréstimos - Usuários</title>
-    <script src="./JS/ListaUsuario.js" defer></script>
-    <link rel="stylesheet" href="./CSS/ListaUser.css" />
+    <script src="../Scripts/Usuarios.js" defer></script>
+    <link rel="stylesheet" href="../Styles//Usuarios.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -19,35 +19,35 @@
         </div>
         <div
           class="menu-item active"
-          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
+          onclick="window.location.href='Usuarios.html'"
         >
           <i class="fas fa-user"></i> Usuários
         </div>
 
         <div
           class="menu-item"
-          onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+          onclick="window.location.href='Emprestimos.html'"
         >
           <i class="fas fa-clipboard-list"></i> Empréstimos
         </div>
 
         <div
           class="menu-item"
-          onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
+          onclick="window.location.href='Ferramentas.html'"
         >
           <i class="fas fa-toolbox"></i> Ferramentas
         </div>
 
         <div
           class="menu-item"
-          onclick="window.location.href='../Locais/local.html'"
+          onclick="window.location.href='Local.html'"
         >
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
 
         <div
           class="menu-item"
-          onclick="window.location.href='../PostEmp/PostEmp.html'"
+          onclick="window.location.href='PostEmp.html'"
         >
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
@@ -61,7 +61,7 @@
           <h1 class="page-title"><i class="fas fa-user"></i> Usuários</h1>
           <button
             class="logout-btn"
-            onclick="window.location.href='../MenuProf/Menu.html'"
+            onclick="window.location.href='Menu.html'"
           >
             <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
