--- a/front/Html/Cadastro.html
+++ b/front/Html/Cadastro.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FaceShield - Cadastro</title>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-    <link rel="stylesheet" href="./CSS/CssCadastro.css" />
-    <script src="./JS/JSCadastro.js" defer></script>
+    <link rel="stylesheet" href="../Styles/Cadastro.css" />
+    <script src="../Scripts/Cadastro.js" defer></script>
   </head>
   <body>
     <div class="decorative-border"></div>
