--- a/front/Html/Ferramentas.html
+++ b/front/Html/Ferramentas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Empréstimos - Ferramentas</title>
-    <link rel="stylesheet" href="./CSS/ListaFerramentasCSS.css" />
+    <link rel="stylesheet" href="../Styles/Ferramentas.css" />
     <script src="./JS/ListaFerramentasJS.js" defer></script>
     <link
       rel="stylesheet"
@@ -12,13 +12,6 @@
     />
   </head>
   <body>
-    <div class="loading-overlay" id="loading-overlay">
-      <div class="loading-content">
-        <div class="loading" style="width: 40px; height: 40px"></div>
-        <p style="margin-top: 20px; font-size: 1.2rem">Carregando dados...</p>
-      </div>
-    </div>
-
     <div class="container">
       <!-- Menu Lateral -->
       <div class="sidebar">
@@ -27,14 +20,14 @@
         </div>
         <div
           class="menu-item"
-          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
+          onclick="window.location.href='Usuarios.html'"
         >
           <i class="fas fa-user"></i> Usuários
         </div>
 
         <div
           class="menu-item"
-          onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+          onclick="window.location.href='Emprestimos.html'"
         >
           <i class="fas fa-clipboard-list"></i> Empréstimos
         </div>
@@ -43,13 +36,13 @@
         </div>
         <div
           class="menu-item"
-          onclick="window.location.href='../Locais/local.html'"
+          onclick="window.location.href='Local.html'"
         >
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
         <div
           class="menu-item"
-          onclick="window.location.href='../PostEmp/PostEmp.html'"
+          onclick="window.location.href='PostEmp.html'"
         >
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
@@ -62,7 +55,7 @@
       <div class="main-content">
         <div
           class="header"
-          onclick="window.location.href='../MenuProf/Menu.html'"
+          onclick="window.location.href='Menu.html'"
         >
           <h1 class="page-title">
             <i class="fas fa-toolbox"></i> Ferramentas Cadastradas
