--- a/front/index.html
+++ b/front/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FaceShield - Auth 3.0</title>
-    <link rel="stylesheet" href="./Inicio/CSS/css.css" />
-    <script src="./Inicio/JS/js.js" defer></script>
+    <title>FaceShield</title>
+    <link rel="stylesheet" href="/front/Style/Index.css" />
+    <link rel="icon" type="image/png" href="/front/Assets/LogoFaceShield.png" />
+    <script src="/front/Scripts/Index.js" defer></script>
   </head>
   <body class="auth-container">
     <div class="main-container">
       <div class="page-header">
         <img
           class="imagemheader"
-          src="./Recursos/LogoFaceShield.png"
+          src="/front/Assets/LogoFaceShield.png"
           alt="Logo FaceShield"
         />
         <h1 class="main-title">FaceShield</h1>
@@ -26,10 +27,10 @@
       </div>
 
       <div class="auth-actions-container">
-        <a href="./Login/CameraLogin.html" class="glowingbutton"> Entrar </a>
+        <a href="/front/Html/Login.html" class="glowingbutton"> Entrar </a>
 
         <a
-          href="./Cadastro/cadastro.html"
+          href="/front/Html/Cadastro.html"
           class="glowingbutton secondary-button"
         >
           Novo Cadastro
