--- a/front/Html/Local.html
+++ b/front/Html/Local.html
@@ -19,10 +19,7 @@
         <div class="logo">
           <h2><i class="fas fa-map-marker-alt"></i> Sistema Locais</h2>
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='Usuarios.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='Usuarios.html'">
           <i class="fas fa-user"></i> Usuários
         </div>
         <div
@@ -37,14 +34,13 @@
         >
           <i class="fas fa-toolbox"></i> Ferramentas
         </div>
-        <div class="menu-item active"
-        onclick="window.location.href='Local.html'">
+        <div
+          class="menu-item active"
+          onclick="window.location.href='Local.html'"
+        >
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='PostEmp.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='PostEmp.html'">
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
         <div class="menu-item" onclick="window.location.href='../index.html'">
@@ -58,10 +54,7 @@
           <h1 class="page-title">
             <i class="fas fa-map-marked-alt"></i> Gerenciamento de Locais
           </h1>
-          <button
-            class="logout-btn"
-            onclick="window.location.href='Menu.html'"
-          >
+          <button class="logout-btn" onclick="window.location.href='Menu.html'">
             <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
         </div>
@@ -194,6 +187,5 @@
     <div id="loading-overlay" class="loading-overlay" style="display: none">
       <div class="loading-spinner"></div>
     </div>
-    
   </body>
 </html>
